health-advisor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-advisor-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-advisor
  template:
    metadata:
      labels:
        app: health-advisor
    spec:
      containers:
        - name: health-advisor
          image: dara9999/health-advisor-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5003
