health-advisor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-advisor-service
spec:
  type: NodePort
  selector:
    app: health-advisor
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
      nodePort: 30353  # Optional: Can be any available port from 30000–32767
