symptom-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symptom-tracker-service
spec:
  selector:
    app: symptom-tracker
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: NodePort
