vital-signs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vital-signs-service
spec:
  selector:
    app: vital-signs-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: NodePort
